--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -14,7 +14,7 @@
     <!--begin main template-->
     <div class="page-header">
         <img src="/images/rawpixel-com-296621.png" width="70%" alt="https://imgdb.net/images/6800.png">
-        <h1>Welcome to my To Do List. <small>Let's be organized, focused, and efficient.</small></h1>
+        <h1>Welcome to my Jenkinsproject To Do List. <small>Let's be organized, focused, and efficient.</small></h1>
     </div>
 
     <div class="col-md-12">
